@@ -7,6 +7,10 @@ Release 2.0.0 - ???
 
 Release 1.20 - ???
 
+   * tika-app in batch mode now requires an interrupt or
+     kill signal to the parent process to stop the parent
+     and the child processes (TIKA-2778).
+
    * Bulk upgrade of dependencies (TIKA-2775).
 
    * Improve language id efficiency in tika-eval (TIKA-2777).
